# clearquote-task

./: .gitignore  ClearQuote Sample Dataset.xlsx  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/: answer.py  db.py  domain.py  llm_sql.py  main.py  settings.py  sql_validate.py
db/: schema.sql
scripts/: load_data.py
tests/: test_end_to_end_smoke.py  test_sql_validate.py
ui/: streamlit_app.py
